--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -64,7 +64,7 @@ The FC and iSCSI protocols don't require licenses on E-Series storage systems us
 
 . Verify your cabling
 +
-See the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] documentation for your version of ONTAP or https://docs.netapp.com/us-en/e-series/install-hw-cabling/index.html[E-Series hardware cabling^] for detailed cabling and configuration information.
+See the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] documentation or https://docs.netapp.com/us-en/e-series/install-hw-cabling/index.html[E-Series hardware cabling^] for detailed cabling and configuration information.
 
 == Step 2: Configure FC HBAs and switches
 
