--- a/hu-wuhu-80.adoc
+++ b/hu-wuhu-80.adoc
@@ -54,7 +54,7 @@ The link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Use Wi
 
 . Verify your cabling.
 +
-See the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] documentation for your version of ONTAP or https://docs.netapp.com/us-en/e-series/install-hw-cabling/index.html[E-Series hardware cabling^] for detailed cabling and configuration information.
+See the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] documentation or https://docs.netapp.com/us-en/e-series/install-hw-cabling/index.html[E-Series hardware cabling^] for detailed cabling and configuration information.
 
 == Step 2: Configure FC HBAs and switches
 
