--- a/hu_wuhu_hba_settings.adoc
+++ b/hu_wuhu_hba_settings.adoc
@@ -18,7 +18,7 @@ The Host Utilities require certain registry and parameter settings to verify tha
 
 Windows Host Utilities set the parameters that affect how the Windows host responds to a delay or loss of data. The particular values have been selected to verify that the Windows host correctly handles events such as the failover of one controller in the storage system to its partner controller.
 
-Not all values apply to the device-specific module (DSM) for SANtricity Storage Manager; however, any overlap of values set by the Host Utilities and those set by the DSM for SANtricity Storage Manager do not result in conflicts.
+Not all values apply to the device-specific module (DSM) for SANtricity Storage Manager; however, any overlap of values set by the Host Utilities and those set by the DSM for SANtricity Storage Manager don't result in conflicts.
 
 FC, NVMe/FC, and iSCSI HBAs also have parameters that you must set to ensure best performance and to successfully handle storage system events.
 
@@ -30,21 +30,22 @@ The installer sets different values depending on whether you specify Microsoft M
 
 [NOTE]
 ====
-You need to change the LimTransferSize parameter value after installing Windows Host Utilities 7.2, see <<nvme_parameters, NVMe parameters>>.
+You need to change the LimTransferSize parameter value after installing Windows Host Utilities 8.0 or 7.2, see <<nvme_parameters, NVMe parameters>>.
 
-For all other parameters and registry keys for Windows Host Utilities 7.2 and 7.1, you should not change the values unless technical support tells you to do so.
+For all other parameters and registry keys for Windows Host Utilities 8.0, 7.2, or 7.1, you don't need to change the values unless technical support tells you to do so.
 ====
 
-== Registry values set by Windows Host Utilities 7.2
+== Registry values set by Windows Host Utilities 8.0 or 7.2
 
-The Windows Host Utilities installer automatically sets registry values that are based on the choices that you make during the installation. You should be aware of these registry values and the operating system version.
+The Windows Host Utilities installer automatically sets registry values and NVMe parameters that are based on the choices that you make during the installation. You should be aware of these values and the operating system version. 
 
-The following values are set by the Windows Host Utilities installer. All values are in decimal unless otherwise stated. 
+[[nvme_parameters]]
 
 [role="tabbed-block"]
 ====
-.HKLM paramters
+.HKLM values
 --
+The following registry values are set by the Windows Host Utilities installer. All values are in decimal unless otherwise stated.
 [NOTE]
 HKLM is the abbreviation for `HKEY_LOCAL_MACHINE`.
 
@@ -161,14 +162,14 @@ Mode",
 
 .NVMe parameters
 --
-[[nvme_parameters]]
-The following NVMe Emulex driver parameters are updated when installing Windows Host Utilities 7.2:
+
+The following NVMe Emulex driver parameters are updated when installing Windows Host Utilities 8.0 or 7.2:
 
 * EnableNVMe = 1
 * NVMEMode = 0
 * LimTransferSize=1
 +
-The LimTransferSize parameter is automatically set to "1" when you install Windows Host Utilities 7.2. After installation, you need to manually change the LimTransferSize value to "0" and reboot the server.
+The LimTransferSize parameter is automatically set to "1" when you install Windows Host Utilities 8.0 or 7.2. After installation, you need to manually change the LimTransferSize value to "0" and reboot the server.
 --
 ====
 
@@ -319,7 +320,7 @@ For Emulex FC HBAs, the installer sets the following parameters:
 |===
 --
 
-.When MPIO is not selected
+.When MPIO isn't selected
 --
 
 |===
@@ -349,7 +350,7 @@ For QLogic FC HBAs, the installer sets the following parameters:
 |===
 --
 
-.When MPIO is not selected
+.When MPIO isn't selected
 --
 
 |===
@@ -369,21 +370,21 @@ For example, in the QLogic QConvergeConsole program, the parameter is displayed 
 The Host Utilities `fcconfig.ini` file displays this parameter as either `LinkDownTimeOut` or `MpioLinkDownTimeOut`, depending on whether MPIO is specified. However, all of these names refer to the same HBA parameter. See https://www.broadcom.com/support/download-search[Emulex^] or https://driverdownloads.qlogic.com/QLogicDriverDownloads_UI/Netapp_search.aspx[QLogic^] to learn more about the timeout parameters.
 
 
-=== Understand the Host Utilities changes to FC HBA driver settings
+== Understand the Host Utilities changes to FC HBA driver settings
 
-During the installation of the required Emulex or QLogic HBA drivers on an FC system, several parameters are checked and, in some cases, modified.
+During the installation of the required Emulex or QLogic HBA drivers on an FC system, several parameters are checked and, in some cases, modified by Windows Host Utilities.
 
-The Host Utilities set values for the following parameters if MS DSM for Windows MPIO is detected:
+Windows Host Utilities set values for the following parameters if MS DSM for Windows MPIO is detected:
 
-* LinkTimeOut – defines the length of time in seconds that the host port waits before resuming I/O after a physical link is down.
-* NodeTimeOut – defines the length of time in seconds before the host port recognizes that a connection to the target device is down.
+* *LinkTimeOut*: Defines the length of time in seconds that the host port waits before resuming I/O after a physical link is down.
+* *NodeTimeOut*: Defines the length of time in seconds before the host port recognizes that a connection to the target device is down.
 
 When troubleshooting HBA issues, check to make sure these settings have the correct values. The correct values depend on two factors:
 
 * The HBA vendor
-* Whether you are using multipathing software (MPIO)
+* Whether you are using MPIO software.
 
-You can correct the HBA settings by running the Repair option of the Windows Host Utilities installer.
+You can correct the HBA settings by link:hu_wuhu_repair_remove.html[running the Repair option] in the Windows Host Utilities installer.
 
 [role="tabbed-block"]
 ====
@@ -391,12 +392,12 @@ You can correct the HBA settings by running the Repair option of the Windows Hos
 .Emulex HBA drivers
 --
 
-If you have an FC system, you must verify the Emulex HBA driver settings. These settings must exist for each port on the HBA.
+If you have an FC system, verify the Emulex HBA driver settings. These settings must exist for each port on the HBA.
 
 .Steps
 
 . Open OnCommand Manager.
-. Select the appropriate HBA from the list and click the *Driver Parameters* tab.
+. Select the appropriate HBA from the list and select the *Driver Parameters* tab.
 +
 The driver parameters appear.
 +
@@ -404,7 +405,7 @@ The driver parameters appear.
 +
 * LinkTimeOut - 1
 * NodeTimeOut - 10
-.. If you are not using MPIO software, ensure that you have the following driver settings:
+.. If you aren't using MPIO software, ensure that you have the following driver settings:
 +
 * LinkTimeOut - 30
 * NodeTimeOut - 120
@@ -412,11 +413,11 @@ The driver parameters appear.
 
 .QLogic HBA drivers
 --
-On FC systems, you must verify the QLogic HBA driver settings. These settings must exist for each port on the HBA.
+On FC systems, verify the QLogic HBA driver settings. These settings must exist for each port on the HBA.
 
 .Steps
 
-. Open QConvergeConsole, and then click *Connect* on the  toolbar.
+. Open QConvergeConsole, and then select *Connect* on the toolbar.
 +
 The *Connect to Host* dialog box appears.
 . Select the appropriate host from the list, and then select *Connect*.
@@ -428,7 +429,7 @@ A list of HBAs appears in the FC HBA pane.
 +
 * Link Down Timeout (linkdwnto) - 1
 * Port Down Retry Count (portdwnrc) - 10
-. If you are not using MPIO software, verify that you have the following driver settings:
+. If you aren't using MPIO software, verify that you have the following driver settings:
 +
 * Link Down Timeout (linkdwnto) - 30
 * Port Down Retry Count (portdwnrc) - 120
