--- a/hu-wuhu-80.adoc
+++ b/hu-wuhu-80.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu-wuhu-80.html
 keywords: windows, 7.2, host utilities, SAN, windows
-summary: Windows Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for ONTAP and E-Series platforms.
+summary: Windows Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for ONTAP platforms.
 ---
 = Install Windows Host Utilities 8.0 for ONTAP storage
 :hardbreaks:
@@ -22,6 +22,8 @@ The Windows Host Utilities support the following versions of Windows:
 * Windows 2022
 * Windows 2019
 * Windows 2016
+
+Windows Host Utilities includes an installation program that sets the required Windows registry and Host Bus Adapter (HBA) parameters so that a Windows host can correctly handle the storage system behaviors for ONTAP platforms.
 
 include::_include/windows/windows-install-chunk-a.adoc[]
 |===
@@ -54,7 +56,7 @@ The link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Use Wi
 
 . Verify your cabling.
 +
-See the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] documentation or https://docs.netapp.com/us-en/e-series/install-hw-cabling/index.html[E-Series hardware cabling^] for detailed cabling and configuration information.
+See the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] documentation for detailed cabling and configuration information.
 
 == Step 2: Configure FC HBAs and switches
 
