--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -25,6 +25,8 @@ Windows Host Utilities supports the following versions of Windows:
 * Windows 2012R2
 * Windows 2012
 
+Windows Host Utilities includes an installation program that sets the required Windows registry and Host Bus Adapter (HBA) parameters so that a Windows host can correctly handle the storage system behaviors for ONTAP and E-Series platforms.
+
 include::_include/windows/windows-install-chunk-a.adoc[]
 
 |===
