Edits post IE review

--- a/hu-luhu-sanlun-utility.adoc
+++ b/hu-luhu-sanlun-utility.adoc
@@ -14,9 +14,7 @@ summary: Describes how to use the Linux Host Utilities 7.1 with ONTAP
 
 [.lead]
 
-Linux Host Utilities is a NetApp host software that provides `sanlun` commands on your Linux host.
-
-The `sanlun` utility is installed automatically when you install the NetApp Host Utilities package. This utility provides the `sanlun` commands that you can use to manage ONTAP LUNs and host bus adapters (HBAs). The `sanlun` commands return information about the ONTAP LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
+Linux Host Utilities is a NetApp host software that provides `sanlun` commands on your Linux host. The `sanlun` utility is installed automatically when you install the NetApp Host Utilities package. This utility provides the `sanlun` commands that you can use to manage ONTAP LUNs and host bus adapters (HBAs). The `sanlun` commands return information about the ONTAP LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
 
 In the following example, the `sanlun lun show all` command returns ONTAP LUN information:
 
