--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -27,7 +27,7 @@ NOTE: The Linux Host Utilities software doesn't support NVMe over Fibre Channel 
 
 .About this task
 
-* When you install the Linux Host Utilities, it doesn't change any settings on your Linux host.
+When you install the Linux Host Utilities, it doesn't change any settings on your Linux host.
 
 .Before you begin
 * For reliable operation, use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your iSCSI, FC, or FCoE configuration is supported.
