fix broken link

--- a/hu_ol_90.adoc
+++ b/hu_ol_90.adoc
@@ -19,7 +19,7 @@ You can use the ONTAP SAN host configuration settings to configure Oracle Linux 
 
 NetApp strongly recommends installing the Linux Host Utilities to support ONTAP LUN management and assist technical support with gathering configuration data.
 
-link:hu-luhu-80[Install Linux Host Utilities 8.0]. 
+link:hu-luhu-80.html[Install Linux Host Utilities 8.0]. 
 
 NOTE: Installing the Linux Host Utilities doesn't change any host timeout settings on your Linux host.
 
